Added demograpics form

--- a/endscreen.html
+++ b/endscreen.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="text-center">
-        Vielen Dank für die Teilnahme!
+        <p>Vielen Dank für die Teilnahme!</p><br>
+        <p>Sie können das Fenster jetzt schließen.</p>
     </div>
 </body>
 </html>
