--- a/study-aufklaerung-01.html
+++ b/study-aufklaerung-01.html
@@ -87,17 +87,11 @@
 
 
     <input type="checkbox" name="Einverständniserklärung" onclick="onCheckBoxClicked(event)">
-    <label for="0">Ich habe die Einverständniserklärung zur Aufklärung über die Teilnahme sorgfältig durchgelesen und
-        stimme dieser zu.</label><br>
-
-    <div class="navigation">
-        <div class="button-container">
-            <div class="button-prev hidden">ZURÜCK</div>
-            <div class="button-next hidden">Umfrage starten</div>
-        </div>
-        <span class="warning hidden">* Sie müssen erst eine Einverständnis abgeben bevor Sie die Umfrage starten
-            können!</span>
-    </div>
+    <label for="0">Ich habe die Einverständniserklärung zur Aufklärung über die Teilnahme sorgfältig durchgelesen und stimme dieser zu.</label><br>
+    <a href="study-vis-no-01.html">
+        <div class="button-next hidden">Umfrage starten</div>
+    </a>
+    
 
 
 <script>
