--- a/study-feedback-vis-simple-01.html
+++ b/study-feedback-vis-simple-01.html
@@ -36,7 +36,9 @@
   </ul>
   <textarea id="qual-feedback" name="qual-feedback" placeholder="Write something..." style="height:200px"></textarea>
   <div class="nextPage">
-    <button class="button" id="button" onclick="saveFeedback()">Click me</button>
+    <a href="study-demographics-01.html">
+      <button class="button" id="button" onclick="saveFeedback()">Click me</button>
+    </a>
   </div>
 
   <script>
