--- a/study-vis-complex-16.html
+++ b/study-vis-complex-16.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Visualisation</title>
+  <title>Complex Visualisation</title>
   <link rel="stylesheet" href="css/main.css">
-  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/jquery-3.6.0.js"></script> 
 </head>
 <body>
   <div class="header">
@@ -39,8 +39,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider01">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img01">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img01">
       </div>
     </div>
     <div class="result">
@@ -54,8 +54,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider02">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img02">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img02">
       </div>
     </div>
     <div class="result">
@@ -69,8 +69,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider03">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img03">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img03">
       </div>
     </div>
     <div class="result">
@@ -84,8 +84,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider04">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img04">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img04">
       </div>
     </div>
     <div class="result">
@@ -99,8 +99,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider05">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img05">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img05">
       </div>
     </div>
     <div class="result">
@@ -114,8 +114,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider06">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img06">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img06">
       </div>
     </div>
     <div class="result">
@@ -129,8 +129,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider07">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img07">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img07">
       </div>
     </div>
     <div class="result">
@@ -144,8 +144,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider08">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img08">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img08">
       </div>
     </div>
     <div class="result">
@@ -159,8 +159,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider09">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img09">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img09">
       </div>
     </div>
     <div class="result">
@@ -174,16 +174,19 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider10">        
         <p>Credible</p>
       </div>
-      <div class="visualisation-simple">
-        <img src="" alt="Visualisation" id="img10">
+      <div class="visualisation-complex">
+        <img src="img/spider-noscale.png" alt="Visualisation" id="img10">
       </div>
     </div>
   
   </div>
 
   <div class="nextPage">
-    <button class="button" id="button" onclick="saveSliders()">Click me</button>
+    <a href="study-feedback-complex-16.html">
+      <button class="button" id="button" onclick="saveSliders()">Click me</button>
+    </a>
   </div>
+  
 
   <div class="footer">
   </div>
@@ -248,7 +251,6 @@
     var topic105_titles = []
     var topic105_snippets = []
     var topic105_urls = []
-    var topic105_scores = []
     var topic114_ids = []
     var topic114_titles = []
     var topic114_snippets = []
@@ -272,7 +274,6 @@
             topic105_titles.push(rowCells[3]);
             topic105_snippets.push(rowCells[4]);
             topic105_urls.push(rowCells[5]);
-            topic105_scores.push(rowCells[6])
             break;
           case '114': 
             topic114_ids.push(rowCells[2]);
@@ -294,11 +295,29 @@
             break;
         }
       }
+      {
+        //console.log(topic105_ids);
+        //console.log(topic105_titles);
+        //console.log(topic105_snippets);
+        //console.log(topic105_urls);
+        //console.log(topic114_ids);
+        //console.log(topic114_titles);
+        //console.log(topic114_snippets);
+        //console.log(topic114_urls);
+        //console.log(topic122_ids);
+        //console.log(topic122_titles);
+        //console.log(topic122_snippets);
+        //console.log(topic122_urls);
+        //console.log(topic129_ids);
+        //console.log(topic129_titles);
+        //console.log(topic129_snippets);
+        //console.log(topic129_urls);
+      }
       for (var i = 0; i < 10; i++) {
         titles[i].innerHTML = topic105_titles[i];
         snippets[i].innerHTML = topic105_snippets[i];
         urls[i].innerHTML = topic105_urls[i];
-        imgs[i].src = 'img/star-' + topic105_scores[i] + '.png';
+        imgs[i].src = 'img/' + topic105_ids[i] + '.png';
       }
     }
     
@@ -316,7 +335,7 @@
       values.push(document.getElementById("slider10").value);
 
       var xmlhttp=new XMLHttpRequest();
-      xmlhttp.open("GET","sliders_simple_01.php?sliders="+values,true);
+      xmlhttp.open("GET","sliders_complex_01.php?sliders="+values,true);
       xmlhttp.send();
     }
 
