--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li><a href="prestudy-ring.html">Ring-Chart</a></li>
   </ul>
   <h2>Main-Study</h2>
+    <a href="study-aufklaerung-01">Aufklärung 1</a>
     <h3>No Visualisations</h3>
       <ul>
         <li><a href="study-no-vis-01.html">No Visualisation</a></li>
