--- a/study-vis-no-01.html
+++ b/study-vis-no-01.html
@@ -152,7 +152,7 @@
   </div>
 
   <div class="nextPage">
-    <a href="study-vis-simple-01.html">
+    <a href="study-feedback-vis-no-01.html">
       <button class="button" id="button" onclick="saveSliders()">Click me</button>
     </a>
   </div>
