--- a/study-demographics-01.html
+++ b/study-demographics-01.html
@@ -18,6 +18,8 @@
         <label for="weiblich">weiblich</label><br>
         <input type="radio" id="divers" name="gender" value="divers">
         <label for="divers">divers</label><br>
+        <input type="radio" id="ka" name="gender" value="ka">
+        <label for="ka">keine Angabe</label><br>
         <label for="occupation">Beruf (Studierende: bitte Studiengang mit angeben)</label><br>
         <input type="text" id="occupation" name="occupation"><br>
         <input type="checkbox" id="vpStunden" name="vpStunden" onclick="onCheckBoxClicked(event)">
@@ -30,7 +32,7 @@
 
     <div class="nextPage">
         <a href="endscreen.html">
-            <button class="button" id="button" onclick="saveDemographics()">Click me</button>
+            <button class="button" id="button" onclick="saveDemographics()">Weiter</button>
         </a>
     </div>
 
