--- a/study-vis-no-01.html
+++ b/study-vis-no-01.html
@@ -153,7 +153,7 @@
 
   <div class="nextPage">
     <a href="study-feedback-vis-no-01.html">
-      <button class="button" id="button" onclick="saveSliders()">Click me</button>
+      <button class="button" id="button" onclick="saveSliders()">Weiter</button>
     </a>
   </div>
 
