--- a/study-vis-simple-01.html
+++ b/study-vis-simple-01.html
@@ -183,7 +183,7 @@
 
   <div class="nextPage">
     <a href="study-feedback-vis-simple-01.html">
-      <button class="button" id="button" onclick="saveSliders()">Click me</button>
+      <button class="button" id="button" onclick="saveSliders()">Weiter</button>
     </a>
   </div>
 
