--- a/index.html
+++ b/index.html
@@ -20,28 +20,6 @@
   <h2>Main-Study</h2>
     <a href="study-aufklaerung-01">Aufklärung 1</a>
     <h3>No Visualisations</h3>
-      <ul>
-        <li><a href="study-no-vis-01.html">No Visualisation</a></li>
-      </ul>
-    <h3>Simple Visualisations</h3>
-      <ul>
-        <li><a href="study-simple-01.html">Simple Visualisation 1</a></li>
-      </ul>
-    <h3>Complex Visualisations</h3>
-      <ul>
-        <li><a href="study-complex-01.html">Complex Visualisation 1</a></li>
-      </ul>
-      <h3>No Visualisations Feedback</h3>
-      <ul>
-        <li><a href="study-feedback-no-vis-01.html">No Visualisation</a></li>
-      </ul>
-    <h3>Simple Visualisations Feedback</h3>
-      <ul>
-        <li><a href="study-feedback-simple-01.html">Simple Visualisation 1</a></li>
-      </ul>
-    <h3>Complex Visualisations Feedback</h3>
-      <ul>
-        <li><a href="study-feedback-complex-01.html">Complex Visualisation 1</a></li>
-      </ul>
+    <a href="study-survey.html">Study main</a>
 </body>
 </html>
