Added random topic selector
code clean-up

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How complex should credibility visualisations be?</title>
-  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
   <h1>Index</h1>
-  <h2>Pre-Study</h2>
-  <ul>
-    <li><a href="prestudy-nightingale-rose.html">Nightingale-Rose-Chart</a></li>
-    <li><a href="prestudy-spider.html">Spider-Chart</a></li>
-    <li><a href="prestudy-cartesian-bar.html">Cartesian-Bar-Chart</a></li>
-    <li><a href="prestudy-radial-bar.html">Radial-Bar-Chart</a></li>
-    <li><a href="prestudy-ring.html">Ring-Chart</a></li>
-  </ul>
-  <h2>Main-Study</h2>
-    <a href="study-aufklaerung-01">Aufklärung 1</a>
-    <h3>No Visualisations</h3>
-    <a href="study-survey.html">Study main</a>
+    <h2>Pre-Study</h2>
+      <ul>
+        <li><a href="prestudy-nightingale-rose.html">Nightingale-Rose-Chart</a></li>
+        <li><a href="prestudy-spider.html">Spider-Chart</a></li>
+        <li><a href="prestudy-cartesian-bar.html">Cartesian-Bar-Chart</a></li>
+        <li><a href="prestudy-radial-bar.html">Radial-Bar-Chart</a></li>
+        <li><a href="prestudy-ring.html">Ring-Chart</a></li>
+      </ul>
+    <h2>Main-Study</h2>
+      <ul>
+        <li><a href="study-aufklaerung.html">Aufklärung</a></li>
+        <li><a href="study-tutorial.html">Tutorial</a></li>
+        <li><a href="study-survey.html">Study Survey</a></li>
+      </ul>
+    
 </body>
 </html>
