--- a/study-aufklaerung.html
+++ b/study-aufklaerung.html
@@ -88,7 +88,7 @@
 
     <input type="checkbox" name="Einverständniserklärung" onclick="onCheckBoxClicked(event)">
     <label for="0">Ich habe die Einverständniserklärung zur Aufklärung über die Teilnahme sorgfältig durchgelesen und stimme dieser zu.</label><br>
-    <a href="study-tutorial-01.html">
+    <a href="study-tutorial.html">
         <div class="button-next hidden">Umfrage starten</div>
     </a>
     
