--- a/study-tutorial.html
+++ b/study-tutorial.html
@@ -23,7 +23,7 @@
         </li>
     </ol>
     <p>Anmerkung: Bitte führen Sie die Umfrage an einem Desktop-/Laptop-Rechner durch.</p>
-    <a href="study-vis-no-01.html">
+    <a href="study-survey.html">
         <button id="button">Start</button>
     </a>
 </body>
