Updated css styling and php for email saving

--- a/study-aufklaerung.html
+++ b/study-aufklaerung.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><base href=".">
-    <script src="./aufklaerung_files/startController.js.download" type="module"></script>
+<html lang="en">
 
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/aufklaerung.css">
-    
 </head>
 
 <body>
@@ -23,10 +23,12 @@
             Die Online-Studie wird ungefähr 30 - 60 Minuten dauern.
         </li>
         <li>
-            Wir werden personenbezogene Daten (Alter, Geschlecht, etc.) erfassen; diese und alle weiteren Angaben sind vertraulich und anonymisiert und können nicht mit Ihnen in Verbindung gebracht werden.
+            Wir werden personenbezogene Daten (Alter, Geschlecht, etc.) erfassen; diese und alle weiteren Angaben sind
+            vertraulich und anonymisiert und können nicht mit Ihnen in Verbindung gebracht werden.
         </li>
         <li>
-            Ergebnisse aus dieser Studie können zu wissenschaftlichen Zwecken weiterverarbeitet und veröffentlicht werden.
+            Ergebnisse aus dieser Studie können zu wissenschaftlichen Zwecken weiterverarbeitet und veröffentlicht
+            werden.
         </li>
     </ul>
     <p>
@@ -34,19 +36,29 @@
     </p>
     <b>1. Zweck und Ziel dieser Studie</b>
     <p>
-        Es soll Verständnis über verschiedene Komplexitätslevel von Credibility Visualisierungen gewonnen werden. Ziel ist es, aufgrund der Ergebnisse dieser Studie zu verstehen, wie Visualisierungen Nutzer bei der Bestimmung der Glaubwürdigkeit von Informationsquellen unterstützen können. Ihre Teilnahme hilft uns, dieses Ziel zu erreichen. Die Ergebnisse dieser Forschung können präsentiert oder veröffentlicht werden.
+        Es soll Verständnis über verschiedene Komplexitätslevel von Credibility Visualisierungen gewonnen werden. Ziel
+        ist es, aufgrund der Ergebnisse dieser Studie zu verstehen, wie Visualisierungen Nutzer bei der Bestimmung der
+        Glaubwürdigkeit von Informationsquellen unterstützen können. Ihre Teilnahme hilft uns, dieses Ziel zu erreichen.
+        Die Ergebnisse dieser Forschung können präsentiert oder veröffentlicht werden.
     </p>
     <b>2. Teilnahme und Vergütung</b>
     <p>
-        Ihre Teilnahme an dieser Online-Studie ist vollkommen freiwillig. Sie werden eine von etwa 30 Personen sein, die für diese Studie befragt werden. Sie können die Teilnahme jederzeit ohne Angabe von Gründen und ohne nachteilige Folgen abbrechen oder sich von der Teilnahme abmelden. Die Beantwortung von Fragen, die Ihnen unangenehm sind oder die Sie nicht beantworten möchten, können Sie verweigern.
+        Ihre Teilnahme an dieser Online-Studie ist vollkommen freiwillig. Sie werden eine von etwa 30 Personen sein, die
+        für diese Studie befragt werden. Sie können die Teilnahme jederzeit ohne Angabe von Gründen und ohne nachteilige
+        Folgen abbrechen oder sich von der Teilnahme abmelden. Die Beantwortung von Fragen, die Ihnen unangenehm sind
+        oder die Sie nicht beantworten möchten, können Sie verweigern.
     </p>
     <b>3. Mögliche Risiken und Vorteile</b>
     <p>
-        Mit dieser Online-Studie sind keine Risiken verbunden. Sollten jedoch im Laufe der Studie Unannehmlichkeiten auftreten, können Sie die Teilnahme beenden. Wir hoffen, dass die durch Ihre Teilnahme gewonnenen Informationen dazu beitragen können, die Forschung auf diesem Gebiet voranzubringen.
+        Mit dieser Online-Studie sind keine Risiken verbunden. Sollten jedoch im Laufe der Studie Unannehmlichkeiten
+        auftreten, können Sie die Teilnahme beenden. Wir hoffen, dass die durch Ihre Teilnahme gewonnenen Informationen
+        dazu beitragen können, die Forschung auf diesem Gebiet voranzubringen.
     </p>
     <b>4. Datenschutz und Vertraulichkeit</b>
     <p>
-        Bei der Teilnahme werden personenbezogene Daten (Alter, Geschlecht, etc.) erfasst. Die Daten sind lediglich den an der Studie unmittelbar beteiligten Projektleitenden und den Versuchsleitenden zugänglich. Alle Daten werden streng vertraulich gehandhabt.
+        Bei der Teilnahme werden personenbezogene Daten (Alter, Geschlecht, etc.) erfasst. Die Daten sind lediglich den
+        an der Studie unmittelbar beteiligten Projektleitenden und den Versuchsleitenden zugänglich. Alle Daten werden
+        streng vertraulich gehandhabt.
     </p>
     <b>5. Fragen zur Studie</b>
     <p>
@@ -71,36 +83,30 @@
             ohne Folgen abbrechen.
         </li>
         <li>
-            Ich erkläre mich bereit, dass im Rahmen die Studie Daten über mich gesammelt und anonymisiert aufgezeichnet werden. Folgende Daten werden anonymisiert gespeichert: Demographische Angaben, Antworten der Feedback-/Bewertungsmöglichkeiten. <br>
-            Die Daten dürfen im Rahmen des Seminars zu wissenschaftlichen Zwecken weiterverarbeitet werden. Meine persönlichen Daten unterliegen dem Datenschutzgesetz (DSGVO).
+            Ich erkläre mich bereit, dass im Rahmen die Studie Daten über mich gesammelt und anonymisiert aufgezeichnet
+            werden. Folgende Daten werden anonymisiert gespeichert: Demographische Angaben, Antworten der
+            Feedback-/Bewertungsmöglichkeiten. <br>
+            Die Daten dürfen im Rahmen des Seminars zu wissenschaftlichen Zwecken weiterverarbeitet werden. Meine
+            persönlichen Daten unterliegen dem Datenschutzgesetz (DSGVO).
         </li>
         <li>
-            Ich weiß, dass ich jederzeit meine Einverständniserklärung ohne Angabe von Gründen widerrufen kann, ohne, dass dies für mich nachteilige Folgen hat.
-        </li>
-        <li>
-            Mit der vorstehend geschilderten Vorgehensweise bin ich einverstanden und bestätige dies durch das Klicken auf <b>Weiter</b>.
+            Ich weiß, dass ich jederzeit meine Einverständniserklärung ohne Angabe von Gründen widerrufen kann, ohne,
+            dass dies für mich nachteilige Folgen hat.
         </li>
     </ul>
 
 
+    <label>
+        Mit der vorstehend geschilderten Vorgehensweise bin ich einverstanden und bestätige dies durch das Klicken auf
+        <b>Weiter</b>.<br>
+    </label>
 
+    <div class="nextPage">
+        <a href="study-tutorial.html">
+            <button class="btn">Weiter</button>
+        </a>
+    </div>
 
+</body>
 
-    <input type="checkbox" name="Einverständniserklärung" onclick="onCheckBoxClicked(event)">
-    <label for="0">Ich habe die Einverständniserklärung zur Aufklärung über die Teilnahme sorgfältig durchgelesen und stimme dieser zu.</label><br>
-    <a href="study-tutorial.html">
-        <div class="button-next hidden">Umfrage starten</div>
-    </a>
-    
-
-
-<script>
-    function onCheckBoxClicked(event) {
-        document.querySelector(".button-next").classList.toggle("hidden");
-        if (event.target.checked) {
-            scrollTo(0, document.body.scrollHeight);
-        }
-    };
-</script>
-
-</body></html>
+</html>
