--- a/study-aufklaerung.html
+++ b/study-aufklaerung.html
@@ -20,7 +20,7 @@
             Ihre Teilnahme ist absolut freiwillig.
         </li>
         <li>
-            Die Online-Studie wird ungefähr 30 - 60 Minuten dauern.
+            Die Online-Studie wird ungefähr 30 Minuten dauern.
         </li>
         <li>
             Wir werden personenbezogene Daten (Alter, Geschlecht, etc.) erfassen; diese und alle weiteren Angaben sind
@@ -46,7 +46,7 @@
         Ihre Teilnahme an dieser Online-Studie ist vollkommen freiwillig. Sie werden eine von etwa 30 Personen sein, die
         für diese Studie befragt werden. Sie können die Teilnahme jederzeit ohne Angabe von Gründen und ohne nachteilige
         Folgen abbrechen oder sich von der Teilnahme abmelden. Die Beantwortung von Fragen, die Ihnen unangenehm sind
-        oder die Sie nicht beantworten möchten, können Sie verweigern.
+        oder die Sie nicht beantworten möchten, können Sie verweigern. Die Teilnahme an der Studie kann mit 0,5 Versuchspersonen-Stunden vergütet werden.
     </p>
     <b>3. Mögliche Risiken und Vorteile</b>
     <p>
