--- a/study-tutorial.html
+++ b/study-tutorial.html
@@ -29,7 +29,7 @@
             Abschließend werden demographische Daten erhoben.
         </li>
     </ol>
-    <p>Anmerkung: Bitte führen Sie die Umfrage an einem Desktop-/Laptop-Rechner durch.</p>
+    <p>Anmerkung: Bitte führen Sie die Umfrage an einem Desktop-/Laptop-Rechner durch. Verwenden Sie außerdem bitte nicht den Firefox-Browser.</p>
     <div class="nextPage">
         <a href="study-survey.html">
             <button class="btn" id="button">Start</button>
